<resources>
    <string name="app_name">PeerBuddy</string>
    <string name="beranda">Beranda</string>
    <string name="profile">Profile</string>
    <string name="riwayat">Riwayat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lokasi_peerbuddy_terdekat">Lokasi PeerBuddy Terdekat</string>
    <string name="maps">maps</string>
    <string name="brain_wise">Brain-wise</string>
    <string name="mental_health">Mental Health</string>
    <string name="chat_dengan_peerbuddy">Chat dengan \n PeerBuddy</string>
    <string name="hallo">Hallo,</string>
    <string name="jhon_doe">Jhon doe</string>
    <string name="tv_splashscreen">“ Hai! Aku YourPeerBuddy. Sahabat cerdas yang selalu ada untuk jaga kesehatan mentalmu!!” </string>
    <string name="counselor_name">Nama Counselor</string>
    <string name="profession">Profesi</string>

    <string-array name="data_name">
        <item>Andi Setiawan</item>
        <item>Dewi Lestari</item>
        <item>Rizky Pratama</item>
        <item>Siti Nurhaliza</item>
        <item>Budi Santoso</item>
        <item>Lina Marlina</item>
        <item>Fajar Nugroho</item>
        <item>Melati Putri</item>
        <item>Arif Rahman</item>
        <item>Citra Anggraini</item>
    </string-array>

    <string-array name="data_profession">
        <item>Psikologi UGM</item>
        <item>Psikologi UI</item>
        <item>Psikologi Unair</item>
        <item>Psikologi Unpad</item>
        <item>Psikologi Undip</item>
        <item>Psikologi UGM</item>
        <item>Psikologi UI</item>
        <item>Psikologi Unair</item>
        <item>Psikologi Unpad</item>
        <item>Psikologi Undip</item>
    </string-array>

    <string-array name="data_phone_number">
        <item>6282136258765</item>
        <item>6282136258765</item>
        <item>6282136258765</item>
        <item>6282136258765</item>
        <item>6282136258765</item>
        <item>6282136258765</item>
        <item>6282136258765</item>
        <item>6282136258765</item>
        <item>6282136258765</item>
        <item>6282136258765</item>
    </string-array>

    <array name="data_photo">
        <item>@drawable/counselor1</item>
        <item>@drawable/counselor2</item>
        <item>@drawable/counselor4</item>
        <item>@drawable/counselor3</item>
        <item>@drawable/counselor6</item>
        <item>@drawable/counselor5</item>
        <item>@drawable/counselor8</item>
        <item>@drawable/counselor7</item>
        <item>@drawable/counselor10</item>
        <item>@drawable/counselor9</item>
    </array>
  
    <string name="sangat_sering">Sangat Sering</string>
    <string name="cukup_sering">Cukup Sering</string>
    <string name="kadang_kadang">Kadang-kadang</string>
    <string name="tidak_pernah">Tidak pernah</string>
    <string name="hasil_tes_ke">Hasil Tes ke-%1$d</string>
    <string name="pemberitahuan_data_riwayat_kosong">Belum ada riwayat, silahkan lakukan tes terlebih dahulu pada Mental Health</string>
    <string name="peringatan_masih_tahap_pengembangan">Fitur ini masih dalam tahap pengembangan</string>
</resources>