<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/questionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Seberapa sering Anda merasa stres dalam satu minggu terakhir?"
        android:textSize="24sp"
        android:textColor="#388E3C"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnSangatSering"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/sangat_sering"
        android:textColor="#D32F2F"
        android:layout_marginBottom="12dp"
        app:backgroundTint="@null"
        android:background="@drawable/rounded_button_stroke_green"/>

    <Button
        android:id="@+id/btnCukupSering"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/cukup_sering"
        android:textColor="#F57C00"
        app:backgroundTint="@null"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_button_stroke_green"/>

    <Button
        android:id="@+id/btnKadangKadang"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/kadang_kadang"
        android:textColor="#FBC02D"
        app:backgroundTint="@null"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_button_stroke_green"/>

    <Button
        android:id="@+id/btnTidakPernah"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/tidak_pernah"
        android:textColor="#388E3C"
        app:backgroundTint="@null"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_button_stroke_green"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="Next"
        android:textColor="#FFFFFF"
        android:backgroundTint="#388E3C"
        android:layout_marginBottom="24dp"
        android:textStyle="bold"
        android:background="@drawable/rounded_button_stroke_green"/>

</LinearLayout>
