<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.beranda.BerandaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hallo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jhon_doe"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:columnCount="4"
            android:orientation="horizontal"
            android:rowCount="2"
            app:layout_constraintEnd_toEndOf="@+id/rv_banner"
            app:layout_constraintStart_toStartOf="@+id/rv_banner"
            app:layout_constraintTop_toBottomOf="@+id/rv_banner">

            <LinearLayout
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:foreground="?attr/selectableItemBackground"
                android:id="@+id/chatPeerBuddy"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_chat_konsul" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="2"
                    android:text="@string/chat_dengan_peerbuddy" />
            </LinearLayout>

        <LinearLayout
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/mentalHealth"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_mental_health" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mental_health" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/brainWise"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/brain_wise" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/brain_wise" />
        </LinearLayout>

    </GridLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/lokasi_peerbuddy_terdekat"
                android:textStyle="bold"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/maps"
                android:src="@drawable/maps"
                android:paddingTop="11dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
